--- a/src/pages/Profile/style.module.css
+++ b/src/pages/Profile/style.module.css
@@ -15,6 +15,8 @@
 
 .profile_wrapper {
   margin: 0 auto;
+  max-width: 960px;
+  padding: 20px;
   display: flex;
   flex-direction: row;
   height: 100vh;
