--- a/src/pages/Profile/style.module.css
+++ b/src/pages/Profile/style.module.css
@@ -4,7 +4,7 @@
   font-weight: 700;
   font-size: 24px;
   line-height: 30px;
-  padding-top: 80px;
+
 }
 
 .profile_link {
@@ -13,12 +13,17 @@
   margin-bottom: 30px;
 }
 
+.section {
+  margin: 0 auto;
+}
+
 .profile_wrapper {
   margin: 0 auto;
   display: flex;
   flex-direction: row;
   height: 100vh;
-  justify-content: space-evenly;
+  width: 70%;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -55,6 +60,11 @@
   color: white;
 }
 
+.active {
+  color: #F2F2F3;
+  margin-bottom: 30px;
+}
+
 .list {
   padding: 0;
   display: grid;
@@ -79,9 +89,7 @@
   margin: 120px auto 0 auto;
 }
 
-.activeLink {
-  color: white;
-}
+
 
 .buttons {
   display: flex;
