--- a/src/pages/style.module.css
+++ b/src/pages/style.module.css
@@ -4,8 +4,11 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
+  width: 80vw;
+  background-color: var(--background-color);
   font-family: 'JetBrains Mono';
 }
+
 
 .wrapper h1 {
   font-style: normal;
@@ -15,10 +18,7 @@
   color: #F2F2F3;
 }
 
-.active {
-  color: #F2F2F3;
-  margin-bottom: 30px;
-}
+
 
 .link {
   margin: 0 0 0 8px;
