--- a/src/components/Form/style.module.css
+++ b/src/components/Form/style.module.css
@@ -1,19 +1,17 @@
-/*.form {
+.buttons {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-family: 'JetBrains Mono';
-}*/
+  justify-content: flex-end;
+  column-gap: 18px;
+}
 
-.wrapper {
+/*.wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
   font-family: 'JetBrains Mono';
-}
+}*/
 
 .form {
   margin: 24px auto 80px;
