--- a/src/components/Order/style.module.css
+++ b/src/components/Order/style.module.css
@@ -82,3 +82,11 @@
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0 0 2px rgba(0, 0, 0, 0.06), 0 0 1px rgba(0, 0, 0, 0.04);
   border-radius: 40px;
 }
+
+.moreThanSix {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 3;
+}
