--- a/src/pages/style.module.css
+++ b/src/pages/style.module.css
@@ -1,4 +1,5 @@
 .wrapper {
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,6 +8,7 @@
   width: 80vw;
   background-color: var(--background-color);
   font-family: 'JetBrains Mono';
+
 }
 
 
@@ -16,6 +18,7 @@
   font-size: 24px;
   line-height: 30px;
   color: #F2F2F3;
+
 }
 
 
