--- a/src/pages/OrdersPage/style.module.css
+++ b/src/pages/OrdersPage/style.module.css
@@ -16,6 +16,28 @@
   padding-right: 24px;
 }
 
+.nav {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 30px;
+  margin-right: 50px;
+}
+
+
+.section_wrapper {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+  width: 90%;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+
+
+
 .section::-webkit-scrollbar {
   width: 8px;
 }
