--- a/src/pages/Profile/style.module.css
+++ b/src/pages/Profile/style.module.css
@@ -8,6 +8,7 @@
 
 .section {
   margin: 0 auto;
+
 }
 
 .profile_wrapper {
@@ -20,30 +21,9 @@
   align-items: center;
 }
 
-.profile_caption {
-  width: 320px;
-  color: #8585AD;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-}
-
-.form {
+.section_form {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 24px;
-  max-width: 480px;
-  width: 480px;
-}
-
-.form div {
-  width: 100%;
-}
-
-.form div div div {
-  max-width: 24px;
+  flex-direction: column
 }
 
 .link {
